fix : security file update 6